--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <br><br><br><br><br><br>
     <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro</p>           
+        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>        
     </footer>
 </body>
 </html>
