--- a/auto.html
+++ b/auto.html
@@ -43,7 +43,7 @@
         <iframe width="652" height="367" src="https://www.youtube.com/embed/NzgdW0apdok" title="🎥IA en la Automatización Industrial y Robótica🎥" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <iframe width="652" height="367" src="https://www.youtube.com/embed/F3viSTmd_U8" title="Inteligencia Artificial IA en la AUTOMATIZACIÓN INDUSTRIAL: 8 Ejemplos de Aplicaciones y Software" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
     <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro</p>           
+        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>          
     </footer>
 </body>
 </html>
