--- a/salud.html
+++ b/salud.html
@@ -63,7 +63,7 @@
     <br><br><br> <br><br><br><br>
     
     <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro</p>           
+        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>           
     </footer>
 </body>
 </html>
