--- a/tipos.html
+++ b/tipos.html
@@ -52,7 +52,7 @@
         <iframe width="652" height="367" src="https://www.youtube.com/embed/tywbLXQkYa8" title="¿Qué tipos de INTELIGENCIA ARTIFICIAL existen? 🤖" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
         <br><br><br><br><br><br>
         <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro</p>           
+        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>          
     </footer>
 </body>
 </html>
