--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     </main>
     <br><br><br>
     
-    <div class="cont">
+    <div class="vids">
         <iframe width="652" height="367" src="https://www.youtube.com/embed/8lMIdrlIWOQ" title="¿Qué es la inteligencia artificial?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="1250" height="703" src="https://www.youtube.com/embed/gYGi9iDbHtM" title="Inteligencia Artificial, te falta un algo | Casi Creativo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
     </div>
-    <br><br><br><br><br><br>
-    <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>        
+        <footer>
+        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>           
     </footer>
 </body>
 </html>
