--- a/desafios.html
+++ b/desafios.html
@@ -44,11 +44,11 @@
     </main>
     <br><br><br>
     
-    <div class="cont">
-        <iframe width="652" height="367" src="https://www.youtube.com/embed/AB7Wt0epglQ" title="Ética en la Inteligencia Artificial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
-    <br><br><br><br><br><br>
+    <div class="vids">
+        <iframe width="652" height="367" src="https://www.youtube.com/embed/AB7Wt0epglQ" title="Ética en la Inteligencia Artificial" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+        <iframe width="1250" height="703" src="https://www.youtube.com/embed/9N1iYDHRZ14" title="Cómo la inteligencia artificial ayudará a los profesores. Kai-Fu Lee, experto en IA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
     <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>          
+        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>            
     </footer>
 </body>
 </html>
