--- a/tipos.html
+++ b/tipos.html
@@ -48,11 +48,12 @@
     </main>
     <br><br><br>
     
-    <div class="cont">
-        <iframe width="652" height="367" src="https://www.youtube.com/embed/tywbLXQkYa8" title="¿Qué tipos de INTELIGENCIA ARTIFICIAL existen? 🤖" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
-        <br><br><br><br><br><br>
+    <div class="vids">
+        <iframe width="652" height="367" src="https://www.youtube.com/embed/tywbLXQkYa8" title="¿Qué tipos de INTELIGENCIA ARTIFICIAL existen? 🤖" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+        <iframe width="1250" height="703" src="https://www.youtube.com/embed/sw8LN2UaNbI" title="TODOS los TIPOS de Inteligencias Artificiales en 5 minutos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
         <footer>
-        <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>          
+                <p>&copy; 2024 Diseño por Ailynn Montenegro - U22219194</p>            
     </footer>
 </body>
 </html>
